testsuite/tests/generic_interfaces/missing_method_implements/test.out
== foo.lkt ==
foo.lkt:15:1: error: Missing implementation for method Interface.method in class BarNode
15 | class BarNode: FooNode implements Interface {
   | ^


lkt_compile: Done
